[BUG] #27118 Fixed for spacing issue in page dropdown in grids for all apps

--- a/themes/Vision/index.scss
+++ b/themes/Vision/index.scss
@@ -337,5 +337,12 @@ label {
   color: #275362;
 }
 
+// This is for the spacing and we have added it to to contain till 1000 or 5000 page count on the dropdown
+// [BUG] #27118
+.k-pager-sizes .k-dropdown, .k-pager-sizes .k-dropdowntree, .k-pager-sizes > select {
+  width: 7em;
+}
+
+
 @import "variables.scss";
 @import "eox.scss";
